Uses .toList() instead of .collect(Collectors.toList()) wherever possible